--- a/src/App.css
+++ b/src/App.css
@@ -2,9 +2,23 @@
   text-align: center;
 }
 
+.particles {
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: -1;
+}
+
+
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
   height: 40vmin;
+}
+.center {
+  display: flex;
+  justify-content: center;
 }
 
 .App-header {
@@ -29,4 +43,11 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.container {
+  display: flex;
+  height: 200px;
+  align-items: center;
+  justify-content:space-between;
 }
