--- a/src/components/Signin/Signin.css
+++ b/src/components/Signin/Signin.css
@@ -1,11 +1,12 @@
 .input_label_rounded {
     border: solid 2px white;
     border-radius: 15px;
+    height: 35px;
     color: white;
 }
 .sign_form{
-    width: 300px;
-    background-color: rgba(255, 255, 255, 0.2);
+    width: 400px;
+    background-color: rgba(255, 255, 255, 0.247);
 }
 .swing-in-top-fwd {
 	-webkit-animation: swing-in-top-fwd 2s cubic-bezier(0.175, 0.885, 0.320, 1.275) both;
